[package]
name = "slugma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 0

[workspace]
members = ["client", "launch", "menu"]

[dependencies]
bevy = "0.13"

client = { path = "client" }
launch = { path = "launch" }
menu = { path = "menu" }
