[package]
name = "slugma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 1

[workspace]
members = ["client", "launch"]

[dependencies]
bevy = "^0"

client = { path = "client" }
launch = { path = "launch" }


[features]
dynamic_linking = ["bevy/dynamic_linking"]
