[package]
name = "launch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy-inspector-egui = "0.21"
clap = "4.4"
rand = "0.8"
regex = "1.10"
ron = "0.8"
shlex = "1.3"

client = { path = "../client" }
